--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,26 @@ header a {
   text-decoration: none;
   font-size: small;
 }
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+main {
+  padding: 1rem;
+}
+.product {
+  border: 1px solid #404040;
+  margin: 1rem;
+}
+
+.product-info {
+  padding: 1rem;
+}
+
+.product img {
+  width: 100%;
+  max-width: 25rem;
+}
