Add footer and style with react bootstrap

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
+/* header {
   background-color: #404040;
   padding: 1rem;
 }
@@ -17,6 +17,10 @@ header a {
   font-weight: bold;
   text-decoration: none;
   font-size: small;
+} */
+
+.site-container {
+  min-height: 100vh;
 }
 
 .products {
@@ -26,7 +30,7 @@ header a {
 }
 
 main {
-  padding: 1rem;
+  flex: 1;
 }
 .product {
   border: 1px solid #404040;
