--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ header a {
   min-height: 100vh;
 }
 
+.rating span {
+  color: #ffc000;
+}
+
 .products {
   display: flex;
   flex-wrap: wrap;
@@ -31,6 +35,10 @@ header a {
 
 main {
   flex: 1;
+}
+.btn-primary {
+  background-color: #f0c040;
+  color: black;
 }
 .product {
   border: 1px solid #404040;
@@ -41,7 +49,7 @@ main {
   padding: 1rem;
 }
 
-.product img {
+/* .product img {
   width: 100%;
   max-width: 25rem;
-}
+} */
